Fix spacing for the big title

--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ a {
   }
 
   .big {
-    font-size: 80px;
+    font-size: 65px;
     line-height: 70px;
   }
 
